PZ-48| Test framework | Configured surefire plugin; Added 7zip test suite class